esquisse classe User et champs necessaire

--- a/15-05-2025.md
+++ b/15-05-2025.md
@@ -23,7 +23,7 @@
     
 - La Graph API permet de créer des réunions Teams à partir d’un simple JSON et d’une authentification valide.
     
-
+- Documentations de tous les champs des [`users`](https://learn.microsoft.com/fr-fr/graph/api/resources/user?view=graph-rest-1.0)
 ## 🐞 Problèmes rencontrés
 
 - Complexité initiale pour comprendre la gestion des tokens et leurs durées de vie respectives.
@@ -33,13 +33,12 @@
 
 ## 🔜 À faire demain
 
-- Démarrer le projet Spring Boot (initialisation avec Spring Initializr).
-    
+- Démarrer le projet Spring Boot (initialisation avec [Spring Initializr](https://start.spring.io/)).
+	
+- Définir tous les champs nécessaire pour la classe `User`.
+	
 - Créer l'entité `User` avec les champs nom, prénom, email.
-    
-- Configurer H2 et Spring Data JPA pour tester la persistance en local.
-    
-- Créer un premier endpoint REST pour tester la création d’un utilisateur.
+	
 
 ## 🧩 Notes / Code
 ```java
@@ -47,5 +46,24 @@
 public class User {
 	@Id
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	private Long id;
+	private String teamsId;
+	private String fullName;
+	private String email;
 	
+	@Enumerated(EnumType.STRING)
+	private Role role;
+	
+	@Enumerated(EnumType.STRING)
+	private Language preferedLanguage;
+	
+	// getters / setters / constructor
+}
+
+public enum Role {
+	DIRECTEUR, PRESIDENT, DEFAULT
+}
+
+public enum Language {
+	EN, FR, ES, 
 }
