Copie du plan + déplacement des notes

--- a/mai/15-05-2025.md
+++ b/mai/15-05-2025.md
@@ -24,6 +24,11 @@
 - La Graph API permet de créer des réunions Teams à partir d’un simple JSON et d’une authentification valide.
     
 - Documentations de tous les champs des [`users`](https://learn.microsoft.com/fr-fr/graph/api/resources/user?view=graph-rest-1.0)
+	
+- Teams / Outlook gère automatiquement les fuseaux horaires, pas besoin d'adapter l'horaire à chaque utilisateur
+	
+- Le `client_secret` est une clé privée générée par Azure lors de l’enregistrement de l’application ; elle est utilisée par le backend dans le flux OAuth2 pour obtenir les jetons d’accès de manière sécurisée. Doit être stockée en tant que variable d'environnement -> `application.properties`.
+
 ## 🐞 Problèmes rencontrés
 
 - Complexité initiale pour comprendre la gestion des tokens et leurs durées de vie respectives.
@@ -67,3 +72,8 @@ public enum Role {
 public enum Language {
 	EN, FR, ES, 
 }
+````
+
+```properties
+CLIENT_SECRET = ....
+```
