--- a/mai/16-05-2025.md
+++ b/mai/16-05-2025.md
@@ -1,29 +1,98 @@
 ## ✅ Tâches effectuées
 
-- Initialisation du projet avec `Spring Initializr`
+- Initialisation du projet avec **Spring Initializr** (Java 21, Spring Boot)
+    
+- Création de la classe **User** avec les champs : `id`, `username`, `email`, `teamsId`, `preferredLanguage`, `role`, `anyRole`
+    
+- Mise en place du **repository JPA** (`UserRepository`) pour manipuler la base de données
+    
+- Configuration d’une base de données **H2 en mode fichier** pour un environnement local/sandbox
+    
+- Injection manuelle d’une sandbox de faux utilisateurs (méthode appelée depuis `main`)
+    
+- Mise en place de l’**API REST** avec le `UserController` et `UserService`
+    
+- Implémentation des opérations **CRUD** (GET all, GET by id, POST create, PUT update, DELETE)
+    
+- Gestion des **endpoints** REST en suivant les bonnes pratiques (`@GetMapping`, `@PostMapping`, etc.)
+    
+- Première ébauche d’un algorithme de **matching aléatoire** des utilisateurs pour organiser des meetings
+    
+- Discussion sur la gestion des cas où un utilisateur ne trouve pas de partenaire compatible (forcer un match ou pas)
 	
-- Création de la classe `User` et du `UserRepository`
-	
-- Création du base de donnée `H2` en local qui sert de sandbox
-	
-- 
 
 ## 📚 Connaissances acquises
 
-- Java 24 n'est pas stable, il est préférable d'utiliser Java 21 ou 23
+- **Java 21** recommandé pour la stabilité et compatibilité (Java 24 encore en preview)
+    
+- Comment configurer et utiliser **H2 Database** en mode fichier dans Spring Boot
+    
+- Différence entre **Controller** et **Service** dans Spring Boot
+    
+- Utilisation des **enum** en Java et impact sur la base de données (modifications nécessitent souvent de recréer la table)
+    
+- Manipulation des **listes et collections** en Java (copie, shuffle, itérations sécurisées)
+    
+- Utilisation de **Spring Data JPA** pour créer des méthodes de recherche personnalisées (`findByEmail`, etc.)
+    
+- Commandes **curl** pour tester les endpoints REST, avec exemples complets (GET, POST, PUT, DELETE)
+    
+- Importance de gérer proprement les cas particuliers dans un système de matching
 	
-- 
 
 ## 🐞 Problèmes rencontrés
 
-- Lors du changement d'une valeur dans les types enum `Role` ou `Language` il faut drop la table `USERS` puis réinjecté des faux utilisateurs
+- Modification d’enum (`Role`, `Language`) nécessite souvent un **drop de la table `users`** puis réinjection des données (attention en production)
+    
+- Gestion du **matching** : faut-il forcer un partenaire si aucun compatible n’est trouvé ? Ou laisser l’utilisateur sans partenaire ?
+    
+- Risque d’erreurs si la taille de la liste est modifiée en cours d’itération — importance de travailler sur une copie
 	
-- 
+- **Matching :**  Trop de`meetings` créés au début car j’avais oublié de vérifier si les deux users étaient déjà dans une `paire`.  Ajout d’un check pour éviter que des users déjà matchés soient utilisés à nouveau.
 
 ## 🔜 À faire demain
 
-- 
+- Finaliser la méthode d’**organisation des meetings** avec gestion des cas « sans partenaire »
+	
+- Base de données pour les meetings
+	
+- Créer la partie **front-end Angular** et connecter avec l’API REST
+	
 
 ## 🧩 Notes / Code
-```java
-// Exemple de code ici
+```bash
+# GET - Récupérer tous les utilisateurs
+curl -X GET http://localhost:8080/api/users
+
+# GET - Récupérer un utilisateur par ID (ex: ID=5)
+curl -X GET http://localhost:8080/api/users/5
+
+# POST - Créer un nouvel utilisateur
+curl -X POST http://localhost:8080/api/users \
+  -H "Content-Type: application/json" \
+  -d '{ 
+        "username": "Julien Martin",         # Nom complet
+        "email": "julien.martin@example.com",# Adresse email
+        "teamsId": "julien123",              # ID Teams fictif
+        "preferredLanguage": "FRENCH",       # Enum (doit exister dans ton code)
+        "role": "DEFAULT",                   # Enum Role
+        "anyRole": true                      # Accepte tous les rôles
+      }'
+
+# PUT - Mettre à jour un utilisateur existant (ex: ID=5)
+curl -X PUT http://localhost:8080/api/users/5 \
+  -H "Content-Type: application/json" \
+  -d '{ 
+        "username": "Julien Martin Updated",
+        "email": "julien.martin@example.com",
+        "teamsId": "julien123",
+        "preferredLanguage": "ENGLISH",
+        "role": "BASIC",
+        "anyRole": false
+      }'
+
+# DELETE - Supprimer un utilisateur par ID (ex: ID=5)
+curl -X DELETE http://localhost:8080/api/users/5
+
+```
+
