--- a/mai/16-05-2025.md
+++ b/mai/16-05-2025.md
@@ -54,11 +54,11 @@
 
 - Finaliser la méthode d’**organisation des meetings** avec gestion des cas « sans partenaire »
 	
-- Base de données pour les meetings
+- Table pour les meetings
 	
 - Créer la partie **front-end Angular** et connecter avec l’API REST
 	
-
+- Déplacer l'algo de création de meeting + changer le type du fichier `Meeting` (Record -> Class)
 ## 🧩 Notes / Code
 ```bash
 # GET - Récupérer tous les utilisateurs
