--- a/mai/19-05-2025.md
+++ b/mai/19-05-2025.md
@@ -12,12 +12,14 @@
 	- Refactorisation des composants HTML avec `header.hpp` et `footer.hpp`
 	- Fusion de tous les styles dans un même fichier CSS
 	- Recherche et réflexion sur l'envoi de mail pour notifier l'ajout d'un témoignage
+	- Ajout d'un Captcha avant d'envoyer son témoignage
 
 ## 📚 Connaissances acquises
 
 - Liaison entre PHP et base de données MySQL avec `PDO`
 - Techniques de mise en page responsive et scrollables en CSS
 - Inclusion dynamique de fichiers (`include`, `require`) pour factoriser du HTML
+- Implémentation de Captcha dans une application
 
 ## 🐞 Problèmes rencontrés
 
@@ -38,4 +40,12 @@ $pdo = new PDO("mysql:host=localhost;dbname=siteweb", "user", "password");
 // Suppression d’un témoignage
 $stmt = $pdo->prepare("DELETE FROM temoignages WHERE id = ?");
 $stmt->execute([$id]);
+
+//
+
+$pageTitle = "Témoignages - MULTIPRESTA";
+require 'config.php';
+
+$stmt = $pdo->query("SELECT nom, message, date, note FROM temoignages1 WHERE valid = 1 ORDER BY id DESC");
+$temoignages = $stmt->fetchAll(PDO::FETCH_ASSOC);
 ```
