--- a/mai/19-05-2025.md
+++ b/mai/19-05-2025.md
@@ -1,36 +1,56 @@
 ## ✅ Tâches effectuées
 
-- **SpeedMeeting** : 
+- **SpeedMeeting :** 
+	
 	- API des Meeting
 	
-- **multipresta.com** 
+- **multipresta.com :** 
+	
 	- Connexion à la base de données au site web
+		
 	- Récupération des témoignages depuis la base de données et affichage dynamique
+		
 	- Mise en page des témoignages dans une section scrollable avec des étoiles de notation
+		
 	- Session admin pour valider les témoignages avant l'apparition dans `temoignages.php`
+		
 	- Ajout de styles CSS
+		
 	- Refactorisation des composants HTML avec `header.hpp` et `footer.hpp`
+		
 	- Fusion de tous les styles dans un même fichier CSS
+		
 	- Recherche et réflexion sur l'envoi de mail pour notifier l'ajout d'un témoignage
+		
 	- Ajout d'un Captcha avant d'envoyer son témoignage
+		
 
 ## 📚 Connaissances acquises
 
 - Liaison entre PHP et base de données MySQL avec `PDO`
+	
 - Techniques de mise en page responsive et scrollables en CSS
+	
 - Inclusion dynamique de fichiers (`include`, `require`) pour factoriser du HTML
+	
 - Implémentation de Captcha dans une application
+	
 
 ## 🐞 Problèmes rencontrés
 
 - Duplication de code HTML
+	
 - Duplication de styles `CSS` créant des problèmes
+	
 - Zoom saccadé
+	
 
 ## 🔜 À faire demain
 
 - Edition / suppression de témoignages via l'interface admin
+	
 - Mail de notification
+	
 
 ## 🧩 Notes / Code
 ```php
