--- a/mai/20-05-2025.md
+++ b/mai/20-05-2025.md
@@ -20,6 +20,8 @@
 		
 	- Regroupement de tous les mots de passe et clé d'API dans un fichier privée
 		
+	- **"Rendu client"**
+	
 
 ## 📚 Connaissances acquises
 
