--- a/mai/20-05-2025.md
+++ b/mai/20-05-2025.md
@@ -22,12 +22,20 @@
 		
 	- **"Rendu client"**
 	
-
+- **SpeedMeeting**
+	- Initialisation du projet **Angular** pour le frontend
+		
+	- Setup du `.gitignore`
+		
+	- Correction de l'algo de création de `meeting`
+		
+	- Finalisation de l'API REST des `meeting`
+	
 ## 📚 Connaissances acquises
 
 - Envoie d'email via la fonction native `mail()` de `IONOS` même depuis une adresse non authentifiée
 	
-- Pré-repmlir un formulaire de modification en PHP avec les données récupérées depuis la BDD
+- Préremplir un formulaire de modification en PHP avec les données récupérées depuis la BDD
 	
 
 ## 🐞 Problèmes rencontrés
@@ -37,7 +45,12 @@
 
 ## 🔜 À faire demain
 
-- 
+- Interface `User` et `Meeting` dans un dossier `models` du frontend
+	
+- Modularisation des services / composants
+	
+- Routing
+	
 
 ## 🧩 Notes / Code
 ```php
