--- a/mai/21-05-2025.md
+++ b/mai/21-05-2025.md
@@ -18,6 +18,14 @@
 	
 - Application des mêmes principes de service, composants, interfaces Angular et gestion backend pour les entités **User** (comme pour **Meeting**).
 	
+- Liste de `User` et de `Meeting` est scrollable
+	
+- Correction type de requête HTTP pour `organizeMeeting`
+	
+- Ajout de boutons dans le frontend pour vider les tables
+	
+- Génération et `username` et `mail` plus variés dans la `SandBox`
+	
 
 ## 📚 Connaissances acquises
 
@@ -38,11 +46,45 @@
 	
 - Confusion sur la route pour afficher le composant liste des réunions.
 	
+- Comportement inattendu de `@RequestMapping("/**")` capturant trop de routes et causant des conflits avec d’autres endpoints.
+	
 
 ## 🔜 À faire demain
 
 - 
 
 ## 🧩 Notes / Code
-```java
-// Exemple de code ici
+```css
+.user-container {  
+  max-height: 400px; /* hauteur fixe du bloc */  
+  overflow-y: auto;  /* scroll vertical */  
+  margin: 0 auto;  
+  padding-right: 10px;  
+  max-width: 450px;  
+  border: 1px solid #ddd;  
+  border-radius: 8px;  
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);  
+}
+```
+
+```html
+<button (click)="organize()">Organiser les réunions</button>  
+<button (click)="deleteMeetings()">Clean meetings</button>  
+  
+<h2 class="title">Liste des réunions</h2>  
+<p class="title">Nombre de réunions : {{ meetings.length }}</p>  
+  
+<div class="meeting-container">  
+  <ul class="meeting-list">  
+    <li *ngFor="let meeting of meetings" class="meeting-item">  
+      <strong>{{ meeting.firstUser.username }}</strong> 🤝  
+      <strong>{{ meeting.secondUser.username }}</strong>  
+      <span class="language"><br>( {{ meeting.language }} )</span>  
+    </li>  </ul></div>
+```
+
+```ts
+deleteMeetings() {  
+  this.meetingService.deleteAllMeetings().subscribe(() => this.meetings = []);  
+}
+```
