--- a/mai/21-05-2025.md
+++ b/mai/21-05-2025.md
@@ -51,7 +51,12 @@
 
 ## 🔜 À faire demain
 
-- 
+- Organisation avec Jeff
+	
+- Se renseigner / voir la doc sur la redirection vers l'authentification microsoft
+	
+- Esquisse de gestion des tokens / comprendre leurs fonctionnements
+	
 
 ## 🧩 Notes / Code
 ```css
