--- a/mai/23-05-2025.md
+++ b/mai/23-05-2025.md
@@ -1,21 +1,72 @@
 ## ✅ Tâches effectuées
 
-- 
+- Implémentation complète de l'envoi d'e-mails via SMTP avec `JavaMailSender`.
+    
+- Intégration de la génération de fichiers ICS pour les invitations aux réunions (format `text/calendar`).
+    
+- Ajout d’une structure de mail personnalisée (sujet, corps, langue, destinataires).
+    
+- Implémentation de l’envoi automatique aux deux participants d'une réunion.
+    
+- Sauvegarde du statut d’envoi (`SENT` / `FAILED`) en base via `MailRequest`.
+    
+- Gestion transactionnelle de l’envoi de mails.
+    
+- Construction dynamique des données ICS (UID, date/heure, participants, lien Teams possible).
+    
+- Ajout d’un template textuel de base pour le corps des messages.
+    
+
+---
 
 ## 📚 Connaissances acquises
 
-- Envoie de mail par SMTP en Java
-	 
+- Utilisation avancée de `JavaMailSender` et `MimeMessage` pour des e-mails multipart avec pièce jointe.
+    
+- Format ICS (`text/calendar`) et structure d’un événement `VEVENT`.
+    
+- Génération et injection conditionnelle d’e-mails destinés à plusieurs utilisateurs à partir d’une entité `Meeting`.
+    
+- Bonnes pratiques pour la gestion des erreurs et l'enregistrement des statuts en base.
+    
+
+---
 
 ## 🐞 Problèmes rencontrés
 
-- 
+- Nécessité de bien configurer les entêtes MIME pour que les calendriers reconnaissent les invitations.
+    
+- Gestion de l'encodage des caractères spéciaux dans les corps des messages.
+    
+- Absence de champ pour l'heure de réunion dans l’entité `Meeting`, remplacée temporairement par `LocalDateTime.now().plusHours(1)`.
+    
+
+---
 
 ## 🔜 À faire demain
 
-- Pool de lien de réunion teams
-- Envoie de mail par wave
+- Créer et gérer un **pool de liens Teams** (fixes ou dynamiques) et les associer aux réunions (`Meeting.teamsLink` ?).
+    
+- Ajouter ce lien au champ `LOCATION` de l’ICS, et éventuellement au corps du mail.
+    
+- Ajouter une option d’envoi par **Wave** (ou Slack/email interne ?).
+    
+- Ajouter la sélection de la langue dans le corps du message (FR/EN).
+    
+
+---
 
 ## 🧩 Notes / Code
+
 ```java
-// Exemple de code ici
+String teamsLink = "https://teams.microsoft.com/l/meetup-join/xyz123";
+
+// Exemple de corps de mail
+return "Bonjour " + toUser.getUsername() + ",\n\n" +
+       "Suite à votre inscription au SpeedMeeting, un partenaire vous a été attribué : " + partnerUser.getUsername() + ".\n" +
+       "Nous vous laissons vous contacter pour organiser votre réunion.\n\n" +
+       "📅 Un événement a été ajouté en pièce jointe à ce mail.\n" +
+       "🔗 Lien de la réunion Teams : " + teamsLink + "\n\n" +
+       "Cordialement,\nL'équipe Act-On";
+
+```
