correction de problème sur le delete en cascade de Users

--- a/mai/27-05-2025.md
+++ b/mai/27-05-2025.md
@@ -50,6 +50,8 @@
     
 - Apparition du composant modal directement dans la page, corrigé ensuite.
     
+- L'appel à meetingRepository.deleteAll() ne libère pas les `link`, on utilise donc meetingService.deleteAllMeeting() qui effectue le reset
+	
 
 ---
 
@@ -61,6 +63,9 @@
 	
 - Services frontend pour `Link` et `Mail` ?
 	
+- Reproduire le système de Popup d'info d'un `user` pour un `meeting`
+	
+
 ---
 
 ## 🧩 Notes / Code
@@ -85,4 +90,13 @@ LocalDateTime end = start.plusHours(1);
   <p><strong>Accepte tout le monde:</strong> {{ selectedUser?.acceptEveryone ? 'Oui' : 'Non' }}</p>  
   <p><strong>Date de d'inscription:</strong> {{selectedUser?.createdAt | date}}</p>  
 </div>
+```
+
+```java
+@Transactional  
+public void deleteAllUsersAndRelatedData() {  
+  mailRepository.deleteAll();  
+  meetingService.deleteAllMeetings(); // reset les links utilisés
+  userRepository.deleteAll();  
+}
 ```
