exemple de code

--- a/mai/28-05-2025.md
+++ b/mai/28-05-2025.md
@@ -58,6 +58,28 @@
 ---
 
 ## 🧩 Notes / Code
+```ts
+deleteMeetingCascade(id: number): Observable<void> {  
+  return this.http.delete<void>(`${this.API_URL}/meetings/delete/force/${id}`);  
+}
+```
+
 ```java
-// Exemple de code ici
+// meetingService.java
+public List<Meeting> searchMeetingsByUserId(long userId) {  
+  return meetingRepository.findAllByFirstUserIdOrSecondUserId(userId, userId);  
+}
+
+// userService.java
+@Transactional  
+public void deleteUserAndRelatedData(Long id) {  
+  var meetings = meetingService.searchMeetingsByUserId(id);  
+  
+  for (var meeting : meetings) {  
+    mailRepository.deleteAllByMeetingId(meeting.getId());  
+  }  
+  
+  meetingService.deleteAllMeetings();  
+  userRepository.deleteById(id);  
+}
 ```
