--- a/mai/30-05-2025.md
+++ b/mai/30-05-2025.md
@@ -1,39 +1,111 @@
-## ✅ Tâches effectuées
+## ✅ Tâches réalisées
 
-- Correction d'un bug : la suppression d'un `user` entrainait la suppression de tous les `meeting`
-	
-- Ajout d'un popup de confirmation avant la suppression de tous les `user` et de tous les `meeting`
-	
-- Ajout d'un bouton pour modifier un `user`
-	 
-- Feature : Barre de recherche par nom d'utilisateur dans la section des `Users`
-	
-- Feature : Barre de recherche par nom d'utilisateurs des participants d'un `meeting` dans la section des `Meetings`
+- **Correction de bug** : la suppression d’un utilisateur n'entraîne plus la suppression de tous les meetings (comportement corrigé).
+    
+- **Confirmation avant suppression** :
+    
+    - Ajout d'une popup de confirmation avant la suppression _de tous_ les utilisateurs.
+        
+    - Idem pour la suppression _de tous_ les meetings.
+        
+- **Modification des utilisateurs** : ajout d’un bouton permettant d’éditer un utilisateur existant.
+    
+- **Recherche utilisateur** :
+	    
+    - Barre de recherche dynamique par nom d’utilisateur dans la liste des _users_.
+        
+    - Barre de recherche sur les noms des participants dans la liste des _meetings_.
+        
+- **Amélioration UI/UX** :
+	    
+    - Intégration de **Material Icons** à la place des emojis.
+        
+    - Refonte des styles des boutons (meilleure lisibilité, cohérence visuelle).
+        
 
 ---
 
-## 📚 Connaissances acquises
+## 📚 Compétences et connaissances acquises
 
-- Barre de recherche / filtre
-	
+- Utilisation des **filtres dynamiques** pour affiner les résultats dans une liste.
+    
+- Intégration et personnalisation de **Material Angular** (icônes, tooltips, composants interactifs).
+    
+- Mise en place de logiques conditionnelles (ex. toggle `show/hide`).
+    
 
 ---
 
 ## 🐞 Problèmes rencontrés
 
-- Il faut faire attention à bien actualiser les listes filtrés lors l'ajout / suppression de `user` / `meeting`
+- Besoin de **réactualiser les listes filtrées** après la suppression ou l'ajout d'un utilisateur ou d'un meeting (sinon les données affichées ne sont plus à jour).
+    
+- Positionnement vertical des **Material Icons** parfois désaligné dans les boutons (résolu avec alignement CSS personnalisé).
 	
 
 ---
 
 ## 🔜 À faire demain
 
-- 
+- Captcha
+	
+- AuthGuard
 	
 
 ---
 
 ## 🧩 Notes / Code
-```java
-// Exemple de code ici
+```html
+<div class="button-group">  
+  <button (click)="goToAddLink()" matTooltip="Add a Link" matTooltipShowDelay="500">  
+    <mat-icon>add_link</mat-icon>  
+  </button>  
+</div>
+```
+
+```ts
+onDelete() {  
+  const confirm = window.confirm('Are you sure you want to delete this user?');  
+  if (confirm) {  
+    this.delete.emit(this.user.id);  
+  }  
+}
+```
+
+```ts
+filterResults(text?: string) {  
+  
+  if (!text) {  
+    this.usersFiltered = this.users;  
+    this.usersNoMeetingFiltered = this.usersNoMeeting;  
+    return;  
+  }  
+  
+  const filterText = text.toLowerCase();  
+  this.usersFiltered = this.users.filter(user =>  
+    user.username.toLowerCase().includes(filterText)  
+  );  
+  
+  this.usersNoMeetingFiltered = this.usersNoMeeting.filter(user =>  
+    user.username.toLowerCase().includes(filterText)  
+  );  
+}
+```
+
+```ts
+modifyUser(user: User) {  
+  this.router.navigate(['/add-user', user.id]).then(r => console.log(r));  
+}
+```
+```ts
+constructor(private userService: UserService, private router: Router, private route: ActivatedRoute) {  
+  const id = this.route.snapshot.params['id'];  
+  if (id) {  
+    this.isEditMode = true;  
+    this.userService.getUserById(+id).subscribe({  
+      next: user => (this.user = user),  
+      error: error => console.log(error),  
+    });  
+  }  
+}
 ```
