--- a/juin/04-06-2025.md
+++ b/juin/04-06-2025.md
@@ -1,10 +1,17 @@
 ## ✅ Tâches effectuées
 
+#### Change-password : 
+
 - Esquisse de la vérification de l'ancien mot de passe
 	
 - Suppression de la table `Password` car inutile.
 	
 - Méthode pour récupérer les utilisateurs nécessitant un reset de mot de passe 
+	
+
+#### SpeedMeeting : 
+
+- Guard avec session admin
 	
 
 ---
@@ -18,7 +25,16 @@
 
 ## 🐞 Problèmes rencontrés
 
+#### Change-password : 
+
 - On ne connais pas encore l'architecture de l'Active Directory
+	
+
+#### SpeedMeeting : 
+
+- Je n'arrive pas à faire la connexion vers une base PostgreSQL
+	
+- Logs admin en dure dans le front
 	
 
 ---
