PostgreSQL, Lombok, clean code

--- a/juin/05-06-2025.md
+++ b/juin/05-06-2025.md
@@ -1,35 +1,86 @@
 ## ✅ Tâches effectuées
 
-#### SpeedMeeting :
-- Passage de la BDD sur PostgreSQL
+### SpeedMeeting
+
+- Usage des annotations Lombok : `@Data`, `@NoArgsConstructor` et `@AllArgsConstructor` pour simplifier le code des classes.
 	
+- Migration de la base de données vers **PostgreSQL** via Docker.
+    
+- Mise en place des **suppression en cascade** directement via les contraintes de la base PostgreSQL.
+    
+- Création d’un **trigger PostgreSQL** permettant de réinitialiser le statut `IS_ACTIVE` d’un `link` après suppression d’un meeting.
+    
+- Suppression des méthodes Java devenues inutiles grâce au comportement en cascade géré par la base de données.
+    
 
 ---
 
 ## 📚 Connaissances acquises
 
-#### SpeedMeeting :
-- Construction et déploiement d'une base PostgreSQL sur Docker
-	
+### SpeedMeeting
+
+- Déploiement et configuration d’une base PostgreSQL via **Docker**.
+    
+- **Rappel sur la création de triggers** PostgreSQL en PL/pgSQL.
+    
 
 ---
 
 ## 🐞 Problèmes rencontrés
 
-#### SpeedMeeting :
-- Manque de connaissances sur Docker
-	
+### SpeedMeeting
+
+- Difficultés liées à un **manque de connaissances sur Docker**, notamment pour les connexions à la base.
+    
+- **Connexion de l’IDE à la base de données PostgreSQL** non fonctionnelle malgré des tentatives avec les bons identifiants.
+    
 
 ---
 
 ## 🔜 À faire demain
 
-- 
+- Intégration d’un **captcha** à la création d’un utilisateur.
+    
+- Amélioration de la gestion des réponses via **`ResponseEntity`**.
 	
 
 ---
 
 ## 🧩 Notes / Code
+```txt
+spring.datasource.url=jdbc:postgresql://localhost:5432/speed_dating_db  
+spring.datasource.driver-class-name=org.postgresql.Driver
+```
+
 ```java
-// Exemple de code ici
+@Data  
+@NoArgsConstructor  
+@AllArgsConstructor  
+@Entity  
+@Table(name = "mails")  
+public class MailRequest {  
+  
+  @Id  
+  @GeneratedValue(strategy = GenerationType.IDENTITY)  
+  private Long id;  
+  
+  private String fromEmail;  
+  
+  private String toEmail;  
+  
+  private String subject;  
+  
+  @Enumerated(EnumType.STRING)  
+  private Language language;  
+  
+  @Enumerated(EnumType.STRING)  
+  private Status status;  
+  
+  private LocalDateTime sentAt;  
+  
+  @ManyToOne(fetch = FetchType.LAZY)  
+  @JoinColumn(name = "meeting_id")  
+  private Meeting meeting;  
+  
+}
 ```
