--- a/juin/04-06-2025.md
+++ b/juin/04-06-2025.md
@@ -1,40 +1,40 @@
 ## ✅ Tâches effectuées
 
-#### Change-password : 
+### 🔐 Change-password
 
-- Esquisse de la vérification de l'ancien mot de passe
-	
-- Suppression de la table `Password` car inutile.
-	
-- Méthode pour récupérer les utilisateurs nécessitant un reset de mot de passe 
-	
+- Esquisse de la vérification de l’ancien mot de passe.
+    
+- Suppression de la table `Password` car jugée inutile.
+    
+- Méthode pour récupérer les utilisateurs nécessitant un reset de mot de passe.
+    
 
-#### SpeedMeeting : 
+### 💬 SpeedMeeting
 
-- Guard avec session admin
-	
+- Guard avec session admin (faux tokens).
+    
 
 ---
 
 ## 📚 Connaissances acquises
 
-- Compréhension de la structure du lien envoyé dans le mail
-	
+- Compréhension de la structure du lien envoyé dans le mail.
+    
 
 ---
 
 ## 🐞 Problèmes rencontrés
 
-#### Change-password : 
+### 🔐 Change-password
 
-- On ne connais pas encore l'architecture de l'Active Directory
-	
+- On ne connaît pas encore l’architecture de l’Active Directory.
+    
 
-#### SpeedMeeting : 
+### 💬 SpeedMeeting
 
-- Je n'arrive pas à faire la connexion vers une base PostgreSQL
-	
-- Logs admin en dure dans le front
+- Je n’arrive pas à faire la connexion vers une base PostgreSQL.
+    
+- Logs admin en dur dans le front.
 	
 
 ---
