Vérification de l'ancien mot de passe + gestion mdp identiques / différents dans le front

--- a/juin/10-06-2025.md
+++ b/juin/10-06-2025.md
@@ -1,15 +1,23 @@
 ## ✅ Tâches effectuées
 
-- Batch de `user` dont le `lastResetPassword` dépasse les 5 mois
-	
-- Envoie de mails avec lien de changement de mot de passe aux `user` du batch
-	
-- Création de deux types de mails différents :
-	- Mail pour changer son mot de passe après voir fais la demande d'un lien
-	- Mail pour indiquer que le mot de passe actuel doit être mise à jour
-	
-- **(A faire)** *Vérification de l'ancien mot de passe*
-	
+- Création d’un batch pour identifier les `user` dont le champ `lastResetPassword` dépasse 5 mois
+    
+- Envoi d’e-mails avec lien de réinitialisation de mot de passe aux `user` identifiés
+    
+- Création de deux modèles d’e-mails distincts :
+    
+    - Mail de changement de mot de passe après demande de lien
+        
+    - Mail d’alerte indiquant que le mot de passe doit être mis à jour
+        
+- Vérification de l’ancien mot de passe dans l’annuaire LDAP (AD)
+    
+- Gestion des messages d’erreur côté front dans les cas suivants :
+    
+    - Ancien et nouveau mot de passe identiques
+        
+    - Nouveau mot de passe différent de la confirmation
+        
 
 ---
 
@@ -22,19 +30,36 @@
 
 ## 🐞 Problèmes rencontrés
 
-- Avec envoi automatique du mail possédant un lien ne durant que 15 min, le `user` va certainement devoir passer par la demande d'un nouveau lien.
+- Le lien de réinitialisation de mot de passe expire après 15 minutes. En cas d’envoi automatique, l’utilisateur devra probablement en redemander un.
 	
 
 ---
 
 ## 🔜 À faire demain
 
-- 
+- Tests
 	
 
 ---
 
 ## 🧩 Notes / Code
+
+```java
+public boolean verifyOldPassword (String openldapId, String oldPassword) {  
+  DirContext ctx = null;  
+  try {  
+    String dn = "cn=" + openldapId + "," + ldapBaseDn;  
+    ctx = contextSource.getContext(dn, oldPassword);  
+    return true;  
+  } catch (NamingException e) {  
+    logger.info("Le mot de passe tapé ne correspond pas à l'ancien mot de passe pour {}", openldapId);  
+    return false;  
+  } finally {  
+    LdapUtils.closeContext(ctx);  
+  }  
+}
+```
+
 ```bash
 docker exec -it changementmdp-postgres bash
 ce4c1117d84a:/ # psql -U user -d changementmdp
@@ -42,4 +67,9 @@ ce4c1117d84a:/ # psql -U user -d changementmdp
 
 ```bash
 ldapsearch -x -H ldap://localhost:1389 -D "cn=admin,dc=example,dc=org" -w admin -b "ou=users,dc=example,dc=org" "(objectClass=person)"
+```
+
+```bash
+# utile pour vérifier l'ancien mot de passe dans le terminal directement
+ldapsearch -x -H ldap://localhost:1389   -D "cn=selym.oumakhlouf.ext.culture.gouv.fr,ou=users,dc=example,dc=org"   -w "NouveauMot123*"   -b "ou=users,dc=example,dc=org" "(objectClass=*)"
 ```
