--- a/juin/20-06-2025.md
+++ b/juin/20-06-2025.md
@@ -48,6 +48,12 @@
 
 ## 🧩 Notes / Code
 
+```bash
+# Démarrage
+./reload-back # si changement
+docker compose down && docker compose up --build
+```
+
 ```yml
 spring:
 	mail:  
