quelque chose à tester pour ldaps

--- a/juin/23-06-2025.md
+++ b/juin/23-06-2025.md
@@ -44,7 +44,9 @@
 
 ## 🔜 À faire demain
 
-- Finaliser la configuration et l’activation de LDAPS
+- Finaliser la configuration et l’activation de LDAPS :
+	
+	- Contexte uniquement pour le changement de mot de passe pour éviter de tous casser
 	
 
 ---
