--- a/juin/30-06-2025.md
+++ b/juin/30-06-2025.md
@@ -27,11 +27,43 @@
 
 - keycloak
 	
+- mail -> enregistrement en base avec un statut, méthode qui tourne tous les X temps qui envoient un certains nombre de mails
+	
+- corriger config spring qui bug depuis facto du back
 
 ---
 
 ## 🧩 Notes / Code
 
-```java
-// Exemple de code ici
+```sql
+-- commande SQL pour remplir la table d'utilisateurs
+INSERT INTO USERS (
+    ACCEPT_EVERYONE,
+    CREATED_AT,
+    EMAIL,
+    PREFERRED_LANGUAGE,
+    ROLE,
+    USERNAME
+)
+SELECT
+    (RANDOM() < 0.5),
+    NOW() - (RANDOM() * INTERVAL '365 days'),
+    's.oumakhlouf@actongroup.com',
+    (ARRAY['ENGLISH', 'FRENCH', 'SPANISH', 'GERMAN', 'DUTCH', 'ITALIAN', 'ROMANSH'])[FLOOR(1 + RANDOM() * 7)::int],
+    (ARRAY['PRESIDENT', 'DIRECTOR', 'DEFAULT', 'TECHNOLOGY', 'STRATEGY', 'HRIS', 'DATA'])[FLOOR(1 + RANDOM() * 7)::int],
+    'user_' || gs
+FROM generate_series(1, 1000) AS gs;
+```
+
+```sql
+INSERT INTO LINKS (
+    IS_ACTIVE,
+    LAST_RESET,
+    LINK
+)
+SELECT
+    (RANDOM() < 0.3),
+    NOW() - (RANDOM() * INTERVAL '365 days'),
+    'https://example.com/reset/'
+FROM generate_series(1, 1000);
 ```
