--- a/juillet/02-07-2025.md
+++ b/juillet/02-07-2025.md
@@ -24,7 +24,7 @@
 
 ## 🐞 Problèmes rencontrés
 
-- Les mails envoyés sont dans la langue du `Meeting` et non dans la langue de l'utilisateur. Il faudrait réintroduire un champ `Language` dans la table des `MailRequest` correspondant à la langue de l'utilisateur pour contruire le body en fonction de cette langue et non celle du `Meeting`
+- Les mails envoyés sont dans la langue du `Meeting` et non dans la langue de l'utilisateur. Il faudrait réintroduire un champ `Language` dans la table des `MailRequest` correspondant à la langue de l'utilisateur pour construire le body en fonction de cette langue et non celle du `Meeting`
 	
 
 ---
