--- a/juillet/03-07-2025.md
+++ b/juillet/03-07-2025.md
@@ -11,7 +11,7 @@
 
 ## 📚 Connaissances acquises
 
-- Le fait de mettre deux liens semblent bloquer la réception des mails côté Act-On
+- Le fait de mettre deux liens identiques semblent bloquer la réception des mails côté Act-On
 	
 
 ---
