--- a/juillet/09-07-2025.md
+++ b/juillet/09-07-2025.md
@@ -29,7 +29,9 @@
 
 - `Change-password` (revoir le mail)
 	
-
+- Rappel feature restantes `SpeedDating` : 
+	- Guard
+	- Keycloak
 ---
 
 ## 🧩 Notes / Code
