concurrence / message temporaire / bugfix

--- a/juillet/18-07-2025.md
+++ b/juillet/18-07-2025.md
@@ -6,8 +6,14 @@
 	
 - Ajouts d'indexes sur les `FKs` -> énorme gain de performance pour `Meetings.deleteAll()`
 	
-- 
-
+- Lock sur la méthode utiliser pour récupérer les `User.m_id is null` au début de `OrganizeMeetings`:
+	- Permet de faire un bricolage de concurrence
+	- Met une requête en attente lorsque de deux demandes de `Organize` sont faites au même moment, ce qui évite d'avoir des `User` dans deux `Meeting`
+	
+- Blocage du clic multiplies par le même utilisateur sur `Organize` dans le front pour éviter le spam sur l'endpoint tant que `Organize` est encore en cours
+	- Ajout d'un reload des données après appel à l'endpoint :
+		- Permet au `n-ieme (n > 1)` utilisateur de récupérer les données après la création des meetings par le premier utilisateur
+	
 
 ---
 
@@ -17,19 +23,27 @@
 	
 - `SSE` pour envoyer des données par waves au front.
 	
+- Lock sur les `Quera` dans les `Spring Data JPA`
+	
 
 ---
 
 ## 🐞 Problèmes rencontrés
 
-- 
+- Bug duplication des réunions si l'on appuie plusieurs fois sur organize durant le calcul
 	
-
+- Le Query JPA ne supporte pas au dessus de 70 000 rows
+	
 ---
 
 ## 🔜 À faire demain
 
-- 
+- Feedback durant `OrganizeMeetings` pour ne pas avoir simplement une attente (+/- longue en fonction du nombre de `Users`)
+	
+- Message temporaire : reset `timeout` lorsque l'on rappuie
+	
+- Regarder duplication de code des différentes méthodes de load des pages
+	 - Possibilité de faire une méthode générique paramétré ?
 	
 
 ---
@@ -74,4 +88,9 @@ explain analyze delete from meetings;
  Trigger for constraint fk_meetinglink: time=39.480 calls=5000
  Execution Time: 136.424 ms
 (7 rows)
+```
+
+```java
+@Lock(LockModeType.PESSIMISTIC_READ)  
+List<User> findUsersByMeetingIdIsNull ();
 ```
