mini bout de code

--- a/juillet/21-07-2025.md
+++ b/juillet/21-07-2025.md
@@ -55,6 +55,7 @@ export function pageLoader<T>(
   fetch$: Observable<Page<T>>,  
   pageProperties: PageProperties<T>,  
   errorHandler: ErrorHandlingService,  
+  onLoad?: (items: T[]) => void,  
 ): void {  
   
   if (pageProperties.isLoading || (!reset && pageProperties.isLastPage)) {  
@@ -75,13 +76,17 @@ export function pageLoader<T>(
       pageProperties.isLastPage = page.last;  
       pageProperties.isLoading = false;  
       pageProperties.totalElements = page.totalElements;  
+  
+      if (onLoad) {  
+        onLoad(pageProperties.container);  
+      }  
     },  
     error: (err: any) => {  
       pageProperties.isLoading = false;  
       errorHandler.handleError(err.error.message);  
     }  
   })  
-}  
+} 
   
   
 export function deleteUtils<T, C>(  
@@ -131,5 +136,104 @@ export function deleteByIdUtils<T extends { id: number }, C>(
       errorHandler.handleError(err.error.message);  
     }  
   })  
+}
+```
+
+```ts
+pagination: PageProperties<Meeting> = {  
+  currentPage: 0,  
+  container: [],  
+  isLastPage: false,  
+  isLoading: false,  
+  totalElements: 0,  
+}  
+  
+pageSize = 25;  
+timeoutRef: { id: number } = {id: 0};  
+  
+constructor(private meetingService: MeetingService,  
+            private errorHandler: ErrorHandlingService) {  
+}  
+  
+loadMeetings(reset: boolean = false) {  
+  pageLoader(  
+    reset,  
+    this.meetingService.getAllMeetings(this.pagination.currentPage, this.pageSize),  
+    this.pagination,  
+    this.errorHandler,  
+  );  
+}  
+  
+ngOnInit(): void {  
+  this.loadMeetings(true);  
+}  
+  
+filterMeetings(text: string) {  
+  this.filter = text;  
+  this.pagination.currentPage = 0;  
+  
+  pageLoader(  
+    true,  
+    this.meetingService.getMeetingFilteredByUsername(  
+      this.filter, this.pagination.currentPage, this.pageSize  
+    ),  
+    this.pagination,  
+    this.errorHandler  
+  );  
+}
+```
+
+```ts
+timeoutRef: { id: number } = {id: 0};  
+  
+paginationAllUsers: PageProperties<UserResponseDto> = {  
+  currentPage: 0,  
+  container: [],  
+  isLastPage: false,  
+  isLoading: false,  
+  totalElements: 0,  
+};  
+  
+paginationUsersNoMeeting: PageProperties<UserResponseDto> = {  
+  currentPage: 0,  
+  container: [],  
+  isLastPage: false,  
+  isLoading: false,  
+  totalElements: 0,  
+}  
+  
+allUsers$ = new BehaviorSubject<UserResponseDto[]>([]);  
+usersNoMeeting$ = new BehaviorSubject<UserResponseDto[]>([]);  
+  
+constructor(  
+  private userService: UserService,  
+  private router: Router,  
+  private errorHandler: ErrorHandlingService  
+) {  
+}  
+  
+ngOnInit() {  
+  this.fetchUsers(true);  
+  this.fetchUsersWithoutMeeting(true);  
+}  
+  
+fetchUsers(reset: boolean = false) {  
+  pageLoader(  
+    reset,  
+    this.userService.getAllUsers(this.paginationAllUsers.currentPage, this.pageSize),  
+    this.paginationAllUsers,  
+    this.errorHandler,  
+    users => this.allUsers$.next(users),  
+  );  
+}  
+  
+fetchUsersWithoutMeeting(reset: boolean = false) {  
+  pageLoader(  
+    reset,  
+    this.userService.usersWithoutMeeting(this.paginationUsersNoMeeting.currentPage, this.pageSize),  
+    this.paginationUsersNoMeeting,  
+    this.errorHandler,  
+    usersNoMeeting => this.usersNoMeeting$.next(usersNoMeeting)  
+  );  
 }
 ```
