--- a/juillet/22-07-2025.md
+++ b/juillet/22-07-2025.md
@@ -32,7 +32,7 @@
 
 - Keycloak : Variable depuis un config.js (voir lien de Julien)
 	
-- Node.js en préparation pour `EIT`
+- ReactJS en préparation pour `EIT`
 	
 - Auto refresh dans les options de config du keycloak
 	
